--- a/bank.html
+++ b/bank.html
@@ -87,6 +87,8 @@
     <div class="banner__content links">
         <a href="index"
            class="btn"> Main </a>
+        <a href="bank-rules"
+           class="btn"> Bank rules </a>
         <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRyjFRAAwVq5lusEL_Uw8sgVWsvDt_m6_mNKJg3CstRpWkoUT2ytlwi6e4xiLTsoVqwMp4xn2gIrEae/pubhtml"
            class="btn"> Price List </a>
     </div>
