--- a/bank.html
+++ b/bank.html
@@ -67,9 +67,9 @@
         <input name="qty" type="number" value="32" placeholder="qty"> <span class="resource">Gold</span><br>
         for a period of time -
         <select name="period">
-            <option value="1">1 mounth</option>
-            <option value="2" selected>2 mounth</option>
-            <option value="3">3 mounth</option>
+            <option value="1">1 month</option>
+            <option value="2" selected>2 month</option>
+            <option value="3">3 month</option>
         </select><br>
         at interest <select name="percent">
             <option value="5">5%</option>
