--- a/bank.html
+++ b/bank.html
@@ -82,7 +82,7 @@
             <strong class="span-resource-receive">5</strong> <span class="resource">Gold</span> and <strong class="span-rg-receive">~565*</strong> R.G<br>
             <span class="warning" style="display: none">Warning! min investment from ~150 RG</span>
         </p>
-         <span class="calc__snoska">*or bank bullion for this amount at the discretion of the bank<br>(cost 5 R.G. for transaction + 5 R.G. for per mounth)</span>
+         <span class="calc__snoska">*or bank bullion for this amount at the discretion of the bank<br>(cost 5 R.G. for transaction + 5 R.G. for per month)</span>
     </div>
     <div class="banner__content links">
         <a href="index"
